system/config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: traefik
spec:
  minReadySeconds: 3
  replicas: 1
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: traefik-forward-auth
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: traefik-forward-auth
        image: ghcr.io/jordemort/traefik-forward-auth:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 4181
          protocol: TCP
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
      #   volumeMounts:
      #   - name: configs
      #     mountPath: /config
      #     subPath: traefik-forward-auth.ini
      # volumes:
      # - name: configs
      #   configMap:
      #     name: configs
