system/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: traefik
spec:
  type: ClusterIP
  selector:
    app: traefik-forward-auth
  ports:
  - name: http
    port: 4181
    protocol: TCP
    targetPort: http
