system/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-forward-auth
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-auth@kubernetescrd
spec:
  tls:
  - secretName: auth-tls
    hosts:
    - auth.poshcode.com
  rules:
  - host: auth.poshcode.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-forward-auth
            port:
              name: http
